samples/_failures_safe/1760961945_4db914_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7010a3eb.c: In function ‘main’:
./samples/SAFE/__tmp_7010a3eb.c:131:16: error: missing terminating " character
  131 |         printf("Decompression failed
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7010a3eb.c:131:9: error: expected expression at end of input
  131 |         printf("Decompression failed
      |         ^~~~~~
./samples/SAFE/__tmp_7010a3eb.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7010a3eb.c:131:9: error: expected declaration or statement at end of input
